samples/_failures_safe/1761265938_68eb0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66235058.c: In function ‘main’:
./samples/SAFE/__tmp_66235058.c:131:15: error: expected ‘;’ at end of input
  131 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_66235058.c:131:9: error: expected declaration or statement at end of input
  131 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_66235058.c:131:9: error: expected declaration or statement at end of input
